CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
PROJECT(stock_exchange_service LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 17)
set(Boost_USE_STATIC_LIBS ON)

FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(PostgreSQL REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)
FIND_LIBRARY(HIREDIS_LIB hiredis)

if(NOT HIREDIS_LIB)
    message(FATAL_ERROR "hiredis library not found")
endif()

# INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
# INCLUDE_DIRECTORIES(${PostgreSQL_INCLUDE_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} Server.cpp json.hpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE Threads::Threads ${Boost_LIBRARIES} PostgreSQL::PostgreSQL ${HIREDIS_LIB} OpenSSL::Crypto)
