CMAKE_MINIMUM_REQUIRED(VERSION 3.21)
PROJECT(stock_exchange_service LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 17)
set(Boost_USE_STATIC_LIBS ON)

FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(PostgreSQL REQUIRED)
FIND_LIBRARY(HIREDIS_LIB hiredis)

if(NOT HIREDIS_LIB)
    message(FATAL_ERROR "hiredis library not found")
endif()

set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
set(SOURCE_DIR ${CMAKE_SOURCE_DIR}/source)

include_directories(${INCLUDE_DIR})
# include_directories(${SOURCE_DIR})

file(GLOB_RECURSE SOURCES
        ${INCLUDE_DIR}/*.h
        ${SOURCE_DIR}/*.cpp)

# INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
# INCLUDE_DIRECTORIES(${PostgreSQL_INCLUDE_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE Threads::Threads ${Boost_LIBRARIES} PostgreSQL::PostgreSQL ${HIREDIS_LIB})
